# mistral_alan_hackathon

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  adaptive_rag_mistral.ipynb  app.py  classify_question.py  conv_history.txt  data.json  ehr_context.txt  llm_chatbot.py  main.py  pyproject.toml  rag_dataset_patient.json  suggestions.py  utils.py
bash_scripts/: create_dataset_doctor.sh  create_dataset_patient.sh  download_pdf_doctor.sh  download_pdf_patient.sh
test/: test_utils.py
