[project]
name = "hackathon_alan_mistral"
version = "0.1.0"
description = "Hackathon"
readme = "README.md"
requires-python ="~=3.10"
authors = [
  {name = "thibault monsel", email = "thibaultmonsel@gmail.com"},
]
keywords = ["pypdf", "clean-text", "datasets", "gradio", "pypdf", "test"]

urls = {repository = "https://github.com/thibmonsel/hackathon_alan_mistral" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["scrap_guidelines/*"]

[tool.ruff]
extend-include = ["*.ipynb"]
fixable = ["I001", "F401"]
ignore = ["E402", "E721", "E731", "E741", "F722"]
ignore-init-module-imports = true
select = ["E", "F", "I001"]
src = []

[tool.ruff.isort]
combine-as-imports = true
extra-standard-library = ["typing_extensions"]
lines-after-imports = 2
order-by-type = false

[tool.pyright]
reportIncompatibleMethodOverride = true
include = ["scrap_guidelines"]